--- a/.md_check_config.json
+++ b/.md_check_config.json
@@ -8,6 +8,11 @@
       {
         "pattern": "^/LICENSE",
         "replacement": "{{BASEURL}}/LICENSE"
+      },
+            "replacementPatterns": [
+      {
+        "pattern": "https://www.ibm.com/docs",
+        "replacement": "https://ibmdocs-test.dcs.ibm.com/docs"
       }
     ],
     "timeout": "20s"
